add css and settlement creation

--- a/index.html
+++ b/index.html
@@ -4,11 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vikings</title>
+    <title>Northwind Saga</title>
     <link href="index.css" rel="stylesheet">
 </head>
 
 <body>
+    <table>
+
+        <tr>
+
+            <td width="30%">
+                <img src="" alt="" width="50%">
+            </td>
+
+            <td >
+                <h1>Northwind Saga</h1>
+            </td>
+
+            <td width="30%">
+                <img src="" alt="" width="50%">
+            </td>
+
+        </tr>
+
+    </table>
+
+    <div id="inventory" class="bar">
+
+    </div>
+
+    <div id="settlers">
+
+    </div>
+
+    <footer>
+        copyright: Sazzzel 2024(c)
+    </footer>
    
 </body>
 
