add logo to page again after merge

--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
     <meta name="author" content="Sazzzel">
 
     <title>Northwind Saga</title>
-    <link href="index.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
-    <table>
+    
+    <table width="100%">
 
         <tr>
 
             <td width="30%">
-                <img src="" alt="" width="50%">
+                <img src="logo.png" width="256px" alt="The Northwind Saga logo. A viking long boat sailing with a mountains and trees in the background." >
             </td>
 
-            <td >
+            <td width="40%">
                 <h1>Northwind Saga</h1>
             </td>
 
             <td width="30%">
-                <img src="" alt="" width="50%">
+                <img src="logo.png" width="256px" alt="The Northwind Saga logo. A viking long boat sailing with a mountains and trees in the background.">
             </td>
 
         </tr>
