banner looks good on mobile

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         <tr>
 
             <td width="30%">
-                <img src="logo.png" width="256px" alt="The Northwind Saga logo. A viking long boat sailing with a mountains and trees in the background." >
+                <img src="logo.png" width="60%" alt="The Northwind Saga logo. A viking long boat sailing with a mountains and trees in the background." >
             </td>
 
             <td width="40%">
-                <h1>Northwind Saga</h1>
+                <h1 class="h1">Northwind Saga</h1>
             </td>
 
             <td width="30%">
-                <img src="logo.png" width="256px" alt="The Northwind Saga logo. A viking long boat sailing with a mountains and trees in the background.">
+                <img src="logo.png" width="60%" alt="The Northwind Saga logo. A viking long boat sailing with a mountains and trees in the background.">
             </td>
 
         </tr>
@@ -36,8 +36,10 @@
     </table>
 
 <div id="createSettlement" class="bar">
+    
+    
     <label>Name your settlement</label>
-    <input type="text" id="sName">
+    <input type="text" id="sName" required>
 
     <input type="button" value="Create" onclick="NameSettelment()">
 
